# lab8

./: CMakeLists.txt  README.md
include/: GeometryPrimitives.h  OpenglRenderSystem.h  Vertex.h  ViewerWindow.h
src/: GeometryPrimitives.cpp  OpenglRenderSystem.cpp  ViewerWindow.cpp  main.cpp
